# ai-playground

./: .gitignore  01-sentence.ipynb  02-compute-embed.ipynb  03-semantic-sextual-similarity.ipynb  03-semantic-textual-similarity.ipynb  04-cross-encoder.ipynb  05-in-document-search.ipynb  06-nv-embed.ipynb  07-train-sentence-transformers.ipynb  08-markitdown.ipynb  09-ollama-png.ipynb  10-pydantic-api.ipynb  11-pdf-to-image.ipynb  12-openai.ipynb  13-deepseek.ipynb  README.md  image in it.docx  main.py  pyproject.toml
